<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/animation_preferences" >
        <CheckBoxPreference
            android:key="bouncer_animation_preference"
            android:title="@string/title_bouncer_animation_preference"
            android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/shortcut_preferences" >
        <CheckBoxPreference
            android:key="lock_screen_shortcut_preference"
            android:title="@string/title_lockscreen_shortcut_preference"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="screenshot_shortcut_preference"
            android:title="@string/title_screenshot_shortcut_preference"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="flashlight_shortcut_preference"
            android:title="@string/title_flashlight_shortcut_preference"
            android:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>